CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT("ui-sample")

ADD_DEFINITIONS("-std=c++11")

FIND_LIBRARY(UI_LIBRARY ui HINTS ${CMAKE_CURRENT_SOURCE_DIR}/libui)

ADD_EXECUTABLE (ui-sample
    main.cpp
)

ADD_EXECUTABLE (ui-menu-sample
    main-menu.cpp
)

TARGET_LINK_LIBRARIES(ui-sample PUBLIC ${UI_LIBRARY})
TARGET_LINK_LIBRARIES(ui-menu-sample PUBLIC ${UI_LIBRARY})
